# pathmod-rs

./: .release.toml  Cargo.toml  Makefile  README.md  rust-toolchain.toml  todo.md
.github/workflows/: ci.yml  release.yml
pathmod/: Cargo.toml  README.md
pathmod/examples/: derive_deep.rs
pathmod/src/: lib.rs
pathmod/tests/: derive_invalid.rs  derive_named.rs  derive_tuple.rs  enum_access.rs  index_vec.rs  reconstruct.rs
pathmod_core/: Cargo.toml  README.md
pathmod_core/src/: lib.rs
pathmod_core/tests/: accessor_basic.rs  accessor_offset.rs
pathmod_derive/: Cargo.toml  README.md
pathmod_derive/src/: lib.rs
pathmod_derive/tests/: ui.rs
pathmod_derive/tests/ui/: enum_multi.rs  enum_multi.stderr  enum_named_single.rs  enum_named_single.stderr  enum_non_enum.rs  enum_non_enum.stderr  enum_unit.rs  enum_unit.stderr  generic_ok.rs  non_struct.rs  non_struct.stderr  unit_struct.rs  unit_struct.stderr  visibility_private_type.rs  visibility_private_type.stderr
