[package]
name = "pathmod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Re-export crate for pathmod"
repository = "https://github.com/dahankzter/pathmod-rs"
readme = "README.md"
homepage = "https://github.com/dahankzter/pathmod-rs"
documentation = "https://docs.rs/pathmod"
keywords = ["accessor", "lens", "derive", "composition"]
categories = ["data-structures", "development-tools"]

[dependencies]
pathmod_core = { version = "0.1.0", path = "../pathmod_core" }
pathmod_derive = { version = "0.1.0", path = "../pathmod_derive" }

[lib]
path = "src/lib.rs"
