[package]
name = "pathmod_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core runtime for pathmod accessors"
repository = "https://github.com/dahankzter/pathmod-rs"
readme = "README.md"
homepage = "https://github.com/dahankzter/pathmod-rs"
documentation = "https://docs.rs/pathmod_core"
keywords = ["accessor", "lens", "offset", "composition"]
categories = ["data-structures", "development-tools"]

[lib]
path = "src/lib.rs"
