[package]
name = "pathmod_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macros for pathmod"
repository = ""

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
pathmod = { path = "../pathmod" }
